[package]
name = "dosio"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"
license = "MIT"
description = "Giant Magellan Telescope dynamic optical simulations inputs/outputs API"
repository = "https://github.com/rconan/dosio"
documentation = "https://docs.rs/dosio"
readme = "README.md"
categories = ["science, simulation"]
keywords = ["telescope", "astronomy"]


[workspace]
members = ["dosio-proc"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
dosio-proc = { version = "^0.1", path = "dosio-proc" }

[dev-dependencies]
serde-pickle = "0.6.2"
