[package]
name = "dosio"
version = "0.1.2"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"
license = "MIT"
description = "Giant Magellan Telescope dynamic optical simulations inputs/outputs API"
repository = "https://github.com/rconan/dosio"
documentation = "https://docs.rs/dosio"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
dosio-macros = { path = "dosio-macros", version = "^0.1"}

[dev-dependencies]
serde-pickle = "0.6.2"
