[package]
name = "dosio-macros"

version = "0.1.4"
edition = "2018"
license = "MIT"
description = "A procedural macro to build the Giant Magellan Telescope dynamic optical simulations inputs/outputs"
repository = "https://github.com/rconan/dosio"
documentation = "https://docs.rs/dosio-macros"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[lib]
proc-macro = true

[dependencies]
hdf5 = "^0.8"
proc-macro2 = "^1.0"
quote = "^1.0"
