[package]
name = "dosio-macros"

version = "0.1.5"
edition = "2018"
license = "MIT"
description = "A procedural macro to build the Giant Magellan Telescope dynamic optical simulations inputs/outputs"
repository = "https://github.com/rconan/dosio"
documentation = "https://docs.rs/dosio-macros"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[lib]
proc-macro = true

[dependencies]
arrow = { version = "6.5.0", optional = true }
hdf5 = {version = "^0.8", optional = true }
parquet = { version = "6.5.0", optional = true }
proc-macro2 = "^1.0"
quote = "^1.0"
thiserror = { version = "1.0.30", optional = true }
zip = { version = "0.5.13", optional = true }

[features]
prqt = ["arrow", "parquet", "thiserror", "zip"]

